[project]
name = "mathsagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "groq>=0.31.0",
    "logfire>=4.3.3",
    "mcp>=1.13.0",
    "pydantic-ai>=0.7.3",
    "pydantic-ai-slim[mcp]>=0.7.3",
]
